FIX: Fix spacing in meta-data (#4)
* more

* more
:

* more

* spacing issues

--- a/scss/user-card.scss
+++ b/scss/user-card.scss
@@ -539,3 +539,8 @@ body:not(.staff) {
   background-color: rgba(var(--secondary-rgb), 1);
   }
 }
+
+.user-card-metadata-outlet {
+  display: flex;
+  flex-direction: row;
+}
